Fixed item popup alignment / overflow

--- a/sass/components/_buttons.sass
+++ b/sass/components/_buttons.sass
@@ -43,6 +43,9 @@ a.button.destroyer, .button
 		+transition(0.3s ease all)
 		+box-shadow(0 2px 3px rgba($grey-darker, 0.5))
 
+#profile .srch .button
+	@extend .buttonright
+
 
 .matchmain, .bpheader
 	a.button.destroyer, .button, .buttonright
