--- a/sass/components/_items.sass
+++ b/sass/components/_items.sass
@@ -25,6 +25,9 @@
 		span, i, br, b
 			float: left
 			clear: both
+			white-space: normal
+		b
+			margin-bottom: 0.25em
 		&:after
 			content: ''
 			float: left
@@ -37,7 +40,7 @@
 		&:before
 			float: left
 			position: relative
-			top: -16px
+			top: -17px
 			left: 15%
 			height: 0
 			width: 0
